stylesheets/styles.scss
@import "bourbon/bourbon";
@import "neat/neat";
@import "base/base";

html, body{
  height: 100%;
}

body{
  @include linear-gradient( 90deg, #A100FF 10%, #713BBE 90%);
  text-align: center;
  margin:0;
  font-family: 'Helvetica', 'Arial', sans-serif;
}
svg{
  overflow: visible;
}

button{
  background: none;
  border-radius: 0;
  border: 3px solid #000;
  color:black;
  &:hover{
    background: black;
    color:white;
  }
}

header{
  @include outer-container;
  nav{
    text-align: right;
    a{
      font-size: 30px;
      color:white;
      &:hover{
        color:#E5D0FF;
      }
    }
  }
}

.fretboard{
  margin-bottom: 20px;
  .chord-name{
    @include outer-container;
    input{
      width: 400px;
      margin: 0px auto 30px auto;
      background: none;
      color: #FFF;
      font-size: 35px;
      border: none;
      border-radius: 0;
      border-bottom: 2px solid #9F7EFF;
      box-shadow: none;
      text-align: center;
      display: inline;
      margin-right: 25px;
      @include placeholder {
        color: #9F7EFF;
      }
      &:focus{
        border-bottom: 2px solid #fff;
      }
    }
    button#generate-chord{
      display: inline;
      font-size: 18px;
      padding: 18px 40px;
      border:3px solid white;
      color:white;
      &:hover{
        background: white;
        color:#A100FF;
      }
    }
  }
}

#logo{
  margin: 10px auto;
}
#canvas_container {
  width:1200px;
  margin: 20px auto;
}

#wood{
  fill: #795d4e;
}

.fret{
  stroke:#5e4747;
  stroke-width:2;
  &.nut{
    stroke: #000;
    stroke-width:8;
  }
}


.string{
  stroke: #ccc;
  stroke-width:1;
}

.marker{
  fill:#FFF;
}

.note{
  cursor:pointer;
  fill:rgba(0,0,0,0);

  &:hover{
    fill:rgba(0,0,0,0.3);
  }
  &.selected{
    fill: #FFF;
    stroke: #1F1F1F;
    stroke-width: 3px;
  }

}

.recent-chords{
  background: white;
  padding:40px 0;
  margin:0;
  border-top:4px solid #43146F;
  height: 100%;
  .chords{
    @include outer-container;
    .chord{
      @include span-columns(2);
      text-align: center;
      margin-bottom: 30px;
      border-bottom:4px solid #fff;
      &:nth-child(6n) {
        margin-right: 0;
      }
      &:nth-child(6n+1) {
        clear: left;
      }
      .image{
        @include span-columns(8);
        @include omega();
      }
      .actions{
        @include span-columns(4);
        margin-top: 20px;
        box-sizing:border-box;
        a{
          visibility: hidden;
          font-size: 13px;
          cursor: pointer;
          padding: 10px;
          border-radius: 190px;
          color: #FFF;
          text-align: center;
          display: block;
          margin-bottom: 10px;
          width: 39px;
          background: #ccc;
          &:hover.edit{
            background: #5AE5B6;
          }
          &:hover.remove{
            background: #F94040;
          }
        }
      }

      &:hover{
        border-bottom:4px solid #eaeaea;
        .actions{
          a{
            visibility: visible;
            &.edit{
              background: #5AE5B6;
            }
            &.remove{
              background: #F94040;
            }
          }
        }
      }
      &.ng-enter {
        @include animation(fadeInLeft 0.5s);
      }

      &.ng-leave {
        @include animation(fadeOut 0.2s);
      }
    }
  }
}

